--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,7 @@ nav#menu ul {
   gap: 15px;
   padding: 0;
   margin: 0;
+
 }
 
 nav#menu ul li a {
@@ -73,9 +74,42 @@ nav#menu ul li a:hover {
 }
 
 main {
-  padding: 20px;
+  display: grid;
+  grid-template-columns: auto 90% auto; 
+  border-radius: 10px;
   text-align: center;
 }
+
+
+section#ficha {
+  background-color: var(--fundo-card);
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px;
+  grid-column: 2;
+}
+
+section#ficha img.foto {
+  width: 150px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 4px solid var(--fundo-card);
+  outline: 5px solid var(--destaque);
+}
+
+section#ficha h1 {
+  margin: 10px 0 5px 0;
+  color: var(--destaque);
+  margin-top: 10px;
+}
+
+section#ficha p {
+  margin: 5px 0;
+  color: var(--texto-inverso);
+}
+
 
 footer {
   background-color: var(--destaque);
@@ -100,4 +134,27 @@ button.botao-tema {
 
 
 }
+.margin {
+  margin: 20px;
+}
 
+div#social {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  width: max-content;
+  margin: 0 auto;
+  padding: 5px;
+  margin-top: 10px;
+}
+
+div#social a {
+  text-decoration: none;
+  color: var(--destaque);
+  font-size: 24px;
+  transition: color 0.3s;
+} 
+
+div#social a:hover {
+  color: var(--destaque-inverso);
+}
