--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,10 @@ div#social a:hover {
   font-size: 1.1em;
   color: var(--destaque);
 }
+#formacao .titulacao {
+  font-size: 1em;
+  color: var(--texto);
+}
 
 /* Estilos para telas maiores */
 @media (min-width: 768px) {
