criado uma lista para fazer

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 body {
   background-color: var(--fundo-principal);
   color: var(--texto);
-  font-family: Arial, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
