--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@
   --fundo-card: #dddddd;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -38,6 +42,9 @@ header {
   align-items: center;
   background-color: var(--destaque);
   color: var(--texto);
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 nav#menu {
@@ -200,48 +207,48 @@ div#social a:hover {
   color: var(--destaque-inverso);
 }
 
-#competencia {
+#competencias {
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
 }
 
-#competencia .info {
+#competencias .info {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-#competencia .nome {
+#competencias .nome {
   font-weight: bold;
   color: var(--texto);
 }
 
-#competencia .porcento {
+#competencias .porcento {
   font-weight: bold;
   color: var(--destaque);
 }
 
-#competencia .barra {
+#competencias .barra {
   width: 100%;
   height: 8px;
   border-radius: 4px;
   background-color: var(--fundo-principal);
 }
 
-#competencia .progresso {
+#competencias .progresso {
   height: 100%;
   border-radius: 4px;
   background-color: var(--destaque-inverso);
 }
 
-#formacao {
+#formacao-container {
   display: flex;
   flex-direction: column-reverse;
   gap: 15px;
 }
 
-#formacao .curso {
+#formacao-container .curso {
   background-color: var(--fundo-principal);
   border-left: 5px solid var(--destaque-inverso);
   border-radius: 5px;
@@ -249,30 +256,78 @@ div#social a:hover {
   transition: border-width 0.5s, border-color 0.5s;
 }
 
-#formacao .curso:hover {
+#formacao-container .curso:hover {
   border-left-width: 15px;
   border-color: var(--destaque);
   cursor: pointer;
 }
 
-#formacao .periodo {
+#formacao-container .periodo {
   font-weight: bold;
   font-size: 0.8em;
   color: var(--texto);
 }
 
-#formacao .instituicao {
+#formacao-container .instituicao {
   font-size: 1.1em;
   color: var(--destaque);
 }
-#formacao .titulacao {
+#formacao-container .titulacao {
   font-size: 1em;
   color: var(--texto);
 }
 
+#projeto-container {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 15px;
+  color: var(--texto);
+  
+}
+
+#projeto-container .projeto {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  background-color: var(--fundo-principal);
+  padding: 10px;
+  border-radius: 8px;
+  border-left: 5px solid var(--destaque-inverso);
+  transition: border-width 0.5s, border-color 0.5s;
+}
+
+#projeto-container .projeto:hover {
+  border-color: var(--destaque);
+  border-left-width: 15px;
+  cursor: pointer;
+}
+
+#projeto-container .foto {
+  width: 100%;
+  aspect-ratio: 16/9;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
 /* Estilos para telas maiores */
 @media (min-width: 768px) {
-  #competencia {
+  #competencias {
     grid-template-columns: 1fr 1fr;
+  }
+
+  #projeto-container .projeto {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  #projeto-container .projeto-info {
+    max-width: 80%;
+  }
+
+  #projeto-container .foto {
+    aspect-ratio: 1/1;
+    max-width: 20%;
+    max-height: 200px;
   }
 }
