Trabalando na Area de Formação - Adicionando certificados dos módulos 4 e 5 do curso de Programação Básica do Estudonauta. Adicionando sitemap.xml e robots.txt para SEO.

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -30,3 +30,13 @@
   font-size: 1em;
   color: var(--texto);
 }
+
+#formacao-container ul {
+  max-width: fit-content;
+  margin-top: 5px;
+  padding-left: 20px;
+  list-style: none;
+  border: 2px solid var(--cor-detalhes);
+  border-radius: 5px;
+  padding: 6px;
+}
