--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,10 @@ footer {
 }
 
 .soc-media {
-  width: 1.5em;
-  height: 1.5em;
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  text-align: center;
 }
 
 
