Finalizado a área do projeto cordel

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -60,6 +60,10 @@
 
 #formacao-container ul li a:visited {
   color: var(--cor-detalhes);
+}
+
+body.escuro #formacao-container ul li a:visited {
+  color: rgb(121, 79, 79);
 
 }
 
