--- a/css/nav.css
+++ b/css/nav.css
@@ -11,6 +11,7 @@ nav#menu a {
   text-decoration: none;
   color: var(--cor-detalhes-alternativa);
   font-weight: bold;
+  font-size: medium;
   padding: 5px 10px;
   border-radius: 5px;
   transition: background-color 0.5s, color 0.5s;
