--- a/css/nav.css
+++ b/css/nav.css
@@ -10,7 +10,7 @@ nav#menu a {
   text-decoration: none;
   color: var(--cor-detalhes-alternativa);
   font-weight: bold;
-  font-size: medium;
+  font-size: small;
   border-radius: 5px;
   transition: background-color 0.5s, color 0.5s;
 }
