--- a/css/nav.css
+++ b/css/nav.css
@@ -4,6 +4,7 @@ nav#menu {
   padding: 0;
   display: flex;
   justify-content: space-evenly;
+  gap: 5px;
 }
 
 nav#menu a {
@@ -12,7 +13,6 @@ nav#menu a {
   font-weight: bold;
   font-size: small;
   border-radius: 5px;
-  margin: 2px;
   transition: background-color 0.5s, color 0.5s;
 }
 
