--- a/css/nav.css
+++ b/css/nav.css
@@ -11,7 +11,7 @@ nav#menu a {
   text-decoration: none;
   color: var(--cor-detalhes-alternativa);
   font-weight: bold;
-  font-size: small;
+  font-size: 0.8em;
   border-radius: 5px;
   transition: background-color 0.5s, color 0.5s;
 }
